# jobless

.devcontainer/: .devcontainer.json  devcontainer.json
backend/: .env  .env.template  Cargo.toml
backend/examples/: quick_dev.rs
backend/src/: app.rs  db.rs  error.rs  main.rs
backend/src/controllers/: auth.rs
backend/src/models/: application.rs  company.rs  job.rs  mod.rs  model_application.rs  model_company.rs  model_job.rs  model_user.rs  user.rs
backend/src/web/: cors.rs  mod.rs  routes_application.rs  routes_company.rs  routes_job.rs  routes_login.rs  routes_user.rs  service_login.rs
backend/src/web/routes/: application.rs  auth.rs  company.rs  job.rs  mod.rs
backend/src/web/services/: auth.rs  cors.rs  jwt.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: hooks.server.js
frontend/src/lib/: redirects.js
frontend/src/lib/components/: ApplicationCard.svelte  CompanyCard.svelte  FormModal.svelte  JobCard.svelte  ValidationFunctions.js  ValidationInput.svelte
frontend/src/routes/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte  Header.svelte  styles.css
frontend/src/routes/about/: +page.svelte
frontend/src/routes/companies/: +page.server.js  +page.svelte
frontend/src/routes/companies/[slug]/: +page.server.js  +page.svelte
frontend/src/routes/jobs/: +page.server.js  +page.svelte
frontend/src/routes/login/: +page.server.js  +page.svelte
frontend/src/routes/profile/: +page.server.js  +page.svelte
frontend/src/routes/register/: +page.server.js  +page.svelte
frontend/src/styles/: auth.css  styles.css
(+4 files in other folders)
