# For quick_dev.rs: cargo watch -q -c -w src/ -x run
# cargo install cargo-watch

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.20"
tower-http = {version = "0.4.4", features = ["cors"]}
tower-cookies = "0.9"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = { version = "0.7.10" }

jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"
dotenv = "0.15.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"
